# lab_project_01

./: .gitignore  Cargo.toml  LICENSE  README.md
shaders/: fragment.glsl  fragment.spv  shadow.glsl  shadow.spv  vertex.glsl  vertex.spv
src/: camera.rs  light.rs  main.rs  mesh.rs  object.rs  pipeline.rs  resource.rs  timer.rs  utils.rs
