[package]
name = "lab_project_01"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["HK416<powerspirit127@gmail.com>"]
description = "Implement drawing a shadow of an object using the `Rust` language and `wgpu`"
readme = "README.md"
license = "LICENSE"
publish = false


[dependencies]
log = "0.4.*" # MIT or Apache-2.0 license.
env_logger = "0.11.*" # MIT or Apache-2.0 license. 
pollster = "0.3.*" # Apache-2.0 license.
crossbeam-queue = "0.3.*" # MIT or Apache-2.0 license.
bytemuck = { version = "1.14.*", features = ["derive"] } # Zlib or Apache-2.0 or MIT license.
glam = { version = "0.25.*", features = ["debug-glam-assert", "bytemuck", "scalar-math"] } # MIT or Apache-2.0 license.
winit = "0.29.*" # Apache-2.0 license.
wgpu = { version = "0.19.*", features = ["spirv"] } # MIT or Apache-2.0 license. 
